fixed spoon img overlapping headings on larger screens

--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,7 @@
 
 .spoon__img {
   width: 45px;
+  margin-top: 1rem;
 }
 
 @media screen and (min-width: 2000px) {
